apps/emby/emby-ext-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emby-ext
  labels:
    type: external
spec:
  tls:
    - hosts:
        - emby.{hostname}
      secretName: emby.ing.cert
  rules:
    - host: emby.{hostname}
      http:
        paths:
          - backend:
              service:
                name: emby
                port:
                  number: 8096
            path: /
            pathType: Prefix
