apps/emby/emby-local-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emby-local

  labels:
    type: local
spec:
  rules:
    - host: emby.local
      http:
        paths:
          - backend:
              service:
                name: emby
                port:
                  number: 8096
            path: /
            pathType: Prefix
